mobile landscape alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,13 @@ body {
   height: 6rem; }
   @media only screen and (max-width: 420px) {
     .filter {
+      justify-content: center;
       width: 80%;
-      margin-bottom: 5rem;
-      height: 8rem; } }
+      margin-bottom: 5rem; } }
+  @media only screen and (max-width: 640px) {
+    .filter {
+      justify-content: center;
+      height: 9rem; } }
   .filter__radio {
     box-sizing: border-box;
     padding: 0;
